--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .color-navbar {
-  background-color: #0093E9 !important;
-  background-image: linear-gradient(90deg, #0093E9 0%, #80D0C7 100%);
+  background-color: #FF283f !important;
+  background-image: linear-gradient(90deg, #FF283f 0%, #FF76  74%);
 }
 
 .color-texto-marca {
   color: #1e3d87 !important;
+}
+
+.margen-superior-main{
+  margin-top: 60px;
 }
