--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .color-navbar {
-  background-color: #FF283f !important;
-  background-image: linear-gradient(90deg, #FF283f 0%, #FF76  74%);
+  background-color: hwb(183 1% 77%) !important;
+  background-image: linear-gradient(90deg, hsl(59, 100%, 57%) 0%, #FF76  74%);
 }
 
 .color-texto-marca {
