--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,13 @@
 .margen-superior-main{
   margin-top: 60px;
 }
+
+.titulo-blanco .dropdown-toggle {
+  color: white !important;
+  font-weight: bold;
+}
+
+.titulo-negro .dropdown-toggle {
+  color: rgb(0, 0, 0) !important;
+  font-weight: bold;
+}
